<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ExpensesListActivity">


    <include
        android:id="@+id/categoryBar"
        layout="@layout/category_bar"
        app:layout_constraintBottom_toTopOf="@+id/Categories" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#26C6DA"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/Categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryBar"
        app:layout_constraintVertical_bias="0.0"
        >


        <EditText
            android:id="@+id/expense_name"
            android:layout_width="196dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/expense_cost"
            android:layout_width="142dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ems="10"
            android:hint="Cost"
            android:inputType="number|numberDecimal" />

        <Button
            android:id="@+id/AddToList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#00BCD4"
            android:gravity="bottom|left"
            android:text="@string/plus_sign"
            android:textColor="#0C0C0C"
            android:textSize="20sp" />

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ListView
        android:id="@+id/Categories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@color/white"
        android:cacheColorHint="#FFFFFF"
        android:clickable="true"
        android:divider="#E9E9E9"
        android:dividerHeight="4dip"
        android:focusable="true"
        android:longClickable="true"
        android:smoothScrollbar="true" />
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:itemIconTint="#5B5A5A"
            app:itemTextColor="#5B5A5A"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/bottom_nav_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>