<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            app:srcCompat="@drawable/logocombined" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/userMessage"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:textColor="#BF0D0D" />

        <EditText
            android:id="@+id/username"
            android:layout_width="249dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/regular"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="249dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/regular"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="249dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/white"
            android:textSize="14dp"
            android:fontFamily="@font/regular"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="Confirm password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="154dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/roundedbutton"
            android:fontFamily="@font/semibold"
            android:textAllCaps="false"
            android:textColor="@color/gradientDark"
            android:textSize="25dp"
            android:text="Sign Up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>